--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -7,13 +7,14 @@ select{
   width: 100%;
   cursor: pointer;
   line-height: inherit;
+  height: 44px;
   
+    
 }
 option{
   background-color: rgb(216, 242, 252);
   color: black;
+  border: none;
+  outline: none;
 }
 
-option:hover{
-  
-}
