Linear progress component

--- a/src/components/ProgressBar/LinearProgress.module.scss
+++ b/src/components/ProgressBar/LinearProgress.module.scss
@@ -1,5 +1,5 @@
 @import './src/index.scss';
-.lineBackground{
+.linebackground{
     width: 400px;
     height: 5px;
     background: lighten($primary ,20%);
