coomit before yarn run eject

--- a/src/components/ProgressBar/LinearProgress.module.scss
+++ b/src/components/ProgressBar/LinearProgress.module.scss
@@ -2,7 +2,7 @@
 .linebackground{
     width: 400px;
     height: 5px;
-    background: lighten($primary ,20%);
+    background: lighten($primary ,20%),
 
 }
 .linePreloader{
