--- a/src/components/BtnTest/BtnTheme.module.scss
+++ b/src/components/BtnTest/BtnTheme.module.scss
@@ -6,12 +6,14 @@
 
 .btnTheme{
     height: 200px;
-    width: 200px;
+    min-width: 150px;
     text-align: center;
     margin: 150px;
     background-color: $container;
-    font-size: $fontsize;
+   
 }
 
-
+span{
+    margin: 100px;
+}
 
